# mahjong-book

./: README.md  pyproject.toml  refs.bib
latex/: main.tex
src/mahjong_book/: __init__.py
